--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,13 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-charts": "^3.0.0-beta.57",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
