--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "faker": "^6.6.6",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
