--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "faker": "^6.6.6",
-    "nth-check": "^2.1.1",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/luxon": "^3.3.5",
     "tailwindcss": "^3.3.5"
   }
